<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBack">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="আপনি কে?"
        android:id="@+id/textView20"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:textSize="50dp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:transitionName="@string/worker_tit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="কি হিসেবে এ্যাপটি  ব্যবহার করবেন?"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView21"
        android:layout_below="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:src="@drawable/mother_user3"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView22"
        android:layout_below="@+id/textView21"
        android:src="@drawable/worker_user3"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/imageView21"
        android:transitionName="@string/worker_pic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="গর্ভবতী মা"
        android:id="@+id/button20"
        android:textColor="@color/colorAccent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="#fc2e00"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_below="@+id/imageView21"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/imageView21"
        android:layout_alignEnd="@+id/imageView21"
        android:transitionName="@string/worker_But"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="স্বাস্থ্যকর্মী"
        android:id="@+id/button21"
        android:textColor="@color/colorAccent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="#5f7de1"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_alignTop="@+id/button20"
        android:layout_alignBottom="@+id/button20"
        android:layout_alignLeft="@+id/imageView22"
        android:layout_alignStart="@+id/imageView22"
        android:transitionName="@string/mother_trans_title"/>

</RelativeLayout>
