<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBack">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="নিবন্ধিত মা?"
        android:id="@+id/textView20"
        android:textSize="50dp"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/imageView22"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:transitionName="@string/worker_tit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="আগে নিবন্ধন করে থাকলে লগইন করুন অথবা নিবন্ধন করুন অথবা বাতিল করুন"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView22"
        android:src="@drawable/mother_user3"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:transitionName="@string/mother_trans_pic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="লগইন"
        android:id="@+id/button20"
        android:textColor="@color/colorAccent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="#fc2e00"
        style="@style/Base.Widget.AppCompat.Button"
        android:transitionName="@string/mother_trans_button"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="নিবন্ধন"
        android:id="@+id/button21"
        android:textColor="@color/colorAccent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="#5f7de1"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_alignTop="@+id/button20"
        android:layout_alignLeft="@+id/textView21"
        android:layout_alignStart="@+id/textView21" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="বাতিল"
        android:id="@+id/button23"
        android:layout_alignTop="@+id/button20"
        android:layout_alignRight="@+id/textView21"
        android:layout_alignEnd="@+id/textView21"
        android:textColor="@color/colorAccent"
        android:background="#5f7de1"
        android:layout_toRightOf="@+id/imageView22"
        android:layout_toEndOf="@+id/imageView22"
        style="@style/Base.Widget.AppCompat.Button"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

</RelativeLayout>
